fullscreen overlay home

--- a/index.html
+++ b/index.html
@@ -39,76 +39,76 @@
 
 <div class="initial-content">
   <div class="page__hero--overlay"
-    style="background-color: #627cd9; background-image: url('/assets/minimal-mistakes/mm-home-page-feature.jpg');">
+    style="background-image: url('/assets/minimal-mistakes/mm-home-page-feature.jpg');">
     <div class="wrapper">
       <h1 id="page-title" class="page__title" itemprop="headline">Chiqui Quant</h1>
       <p class="page__lead">"Il dubbio è la molla più potente per impadronirsi di un argomento." - Erio Castagnoli </p>
     </div>
   </div>
 
-  <div id="main" role="main">
-    <article class="splash" itemscope itemtype="https://schema.org/CreativeWork">
-      <meta itemprop="description" content="A flexible two-column Jekyll theme. Perfect for building personal sites, blogs, and portfolios. Latest release v4.16.4">
-      <section class="page__content" itemprop="text">
-        <div class="feature__wrapper">
-          <div class="feature__item">
-            <div class="archive__item">
-              <div class="archive__item-teaser">
-                <img src="/assets/minimal-mistakes/mm-customizable-feature.png" alt="customizable" />
-              </div>
-              <div class="archive__item-body">
-                <h2 class="archive__item-title">Topics</h2>
-                <div class="archive__item-excerpt">
-                  <p>Posts sorted by topic.</p>
-                </div>
-                <p><a href="/topics/" class="btn btn--primary">Learn more</a></p>
-              </div>
-            </div>
-          </div>
-          <div class="feature__item">
-            <div class="archive__item">
-              <div class="archive__item-teaser">
-                <img src="/assets/minimal-mistakes/mm-free-feature.png" alt="fully responsive" />
-              </div>
-              <div class="archive__item-body">
-                <h2 class="archive__item-title">Archive</h2>
-                <div class="archive__item-excerpt">
-                  <p>Posts sorted by date.</p>
-                </div>
-                <p><a href="/archive/" class="btn btn--primary">Learn more</a></p>
-              </div>
-            </div>
-          </div>
-          <div class="feature__item">
-            <div class="archive__item">
-              <div class="archive__item-teaser">
-                <img src="/assets/minimal-mistakes/quotation.png" alt="fully responsive" />
-              </div>
-              <div class="archive__item-body">
-                <h2 class="archive__item-title">Quotes</h2>
-                <div class="archive__item-excerpt">
-                  <p>A collection of quotes that inspired me.</p>
-                </div>
-                <p><a href="/quotes/" class="btn btn--primary">Learn more</a></p>
-              </div>
-            </div>
-          </div>
-          <div class="feature__item">
-            <div class="archive__item">
-              <div class="archive__item-teaser">
-                <img src="/assets/minimal-mistakes/mm-responsive-feature.png" alt="100% free" />
-              </div>
-              <div class="archive__item-body">
-                <h2 class="archive__item-title">About</h2>
-                <div class="archive__item-excerpt">
-                  <p>About this personal blog.</p>
-                </div>
-                <p><a href="/about/" class="btn btn--primary">Learn more</a></p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-    </article>
+  <!-- <div id="main" role="main"> -->
+  <!--   <article class="splash" itemscope itemtype="https://schema.org/CreativeWork"> -->
+  <!--     <meta itemprop="description" content="A flexible two-column Jekyll theme. Perfect for building personal sites, blogs, and portfolios. Latest release v4.16.4"> -->
+  <!--     <section class="page__content" itemprop="text"> -->
+  <!--       <div class="feature__wrapper"> -->
+  <!--         <div class="feature__item"> -->
+  <!--           <div class="archive__item"> -->
+  <!--             <div class="archive__item-teaser"> -->
+  <!--               <img src="/assets/minimal-mistakes/mm-customizable-feature.png" alt="customizable" /> -->
+  <!--             </div> -->
+  <!--             <div class="archive__item-body"> -->
+  <!--               <h2 class="archive__item-title">Topics</h2> -->
+  <!--               <div class="archive__item-excerpt"> -->
+  <!--                 <p>Posts sorted by topic.</p> -->
+  <!--               </div> -->
+  <!--               <p><a href="/topics/" class="btn btn--primary">Learn more</a></p> -->
+  <!--             </div> -->
+  <!--           </div> -->
+  <!--         </div> -->
+  <!--         <div class="feature__item"> -->
+  <!--           <div class="archive__item"> -->
+  <!--             <div class="archive__item-teaser"> -->
+  <!--               <img src="/assets/minimal-mistakes/mm-free-feature.png" alt="fully responsive" /> -->
+  <!--             </div> -->
+  <!--             <div class="archive__item-body"> -->
+  <!--               <h2 class="archive__item-title">Archive</h2> -->
+  <!--               <div class="archive__item-excerpt"> -->
+  <!--                 <p>Posts sorted by date.</p> -->
+  <!--               </div> -->
+  <!--               <p><a href="/archive/" class="btn btn--primary">Learn more</a></p> -->
+  <!--             </div> -->
+  <!--           </div> -->
+  <!--         </div> -->
+  <!--         <div class="feature__item"> -->
+  <!--           <div class="archive__item"> -->
+  <!--             <div class="archive__item-teaser"> -->
+  <!--               <img src="/assets/minimal-mistakes/quotation.png" alt="fully responsive" /> -->
+  <!--             </div> -->
+  <!--             <div class="archive__item-body"> -->
+  <!--               <h2 class="archive__item-title">Quotes</h2> -->
+  <!--               <div class="archive__item-excerpt"> -->
+  <!--                 <p>A collection of quotes that inspired me.</p> -->
+  <!--               </div> -->
+  <!--               <p><a href="/quotes/" class="btn btn--primary">Learn more</a></p> -->
+  <!--             </div> -->
+  <!--           </div> -->
+  <!--         </div> -->
+  <!--         <div class="feature__item"> -->
+  <!--           <div class="archive__item"> -->
+  <!--             <div class="archive__item-teaser"> -->
+  <!--               <img src="/assets/minimal-mistakes/mm-responsive-feature.png" alt="100% free" /> -->
+  <!--             </div> -->
+  <!--             <div class="archive__item-body"> -->
+  <!--               <h2 class="archive__item-title">About</h2> -->
+  <!--               <div class="archive__item-excerpt"> -->
+  <!--                 <p>About this personal blog.</p> -->
+  <!--               </div> -->
+  <!--               <p><a href="/about/" class="btn btn--primary">Learn more</a></p> -->
+  <!--             </div> -->
+  <!--           </div> -->
+  <!--         </div> -->
+  <!--       </div> -->
+  <!--     </section> -->
+  <!--   </article> -->
 
     {{ insert foot.html }}
